==> MingXin-1102/stm32f407-weatherclock/driver/lcd/lcd.c <==
#include "lcd.h"
#include "log.h"
#include <stdio.h>

void LCD_DrawPoint(uint16_t x, uint16_t y, uint16_t paint_color)
{
    LCD_SetCursor(x, y);    // 设置光标位置
    LCD_WriteRAM_Prepare(); // 开始写入GRAM
    LCD->LCD_RAM = paint_color;
}

void LCD_Set_Window(uint16_t sx,uint16_t sy,uint16_t width,uint16_t height)
{
    width=sx+width-1;
    height=sy+height-1;
    LCD_WR_REG(lcddev.setxcmd);
    LCD_WR_DATA(sx>>8);
    LCD_WR_DATA(sx&0XFF);
    LCD_WR_DATA(width>>8);
    LCD_WR_DATA(width&0XFF);
    LCD_WR_REG(lcddev.setycmd);
    LCD_WR_DATA(sy>>8);
    LCD_WR_DATA(sy&0XFF);
    LCD_WR_DATA(height>>8);
    LCD_WR_DATA(height&0XFF);
}

void lcd_gpio_init(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;

    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_1;         // PB1 推挽输出,控制背光
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;     // 普通输出模式
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;    // 推挽输出
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz; // 100MHz
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;      // 上拉
    GPIO_Init(GPIOB, &GPIO_InitStructure);            // 初始化 //PB15 推挽输出,控制背光

    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_0 | GPIO_Pin_1 | GPIO_Pin_4 | GPIO_Pin_5 | GPIO_Pin_7 | GPIO_Pin_8 | GPIO_Pin_9 | GPIO_Pin_10 | GPIO_Pin_13 | GPIO_Pin_14 | GPIO_Pin_15; // PD0,1,4,5,8,9,10,14,15 AF OUT
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;                                                                                                                                    // 复用输出
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;                                                                                                                                  // 推挽输出
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;                                                                                                                              // 100MHz
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;                                                                                                                                    // 上拉
    GPIO_Init(GPIOD, &GPIO_InitStructure);                                                                                                                                          // 初始化

    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_7 | GPIO_Pin_8 | GPIO_Pin_9 | GPIO_Pin_10 | GPIO_Pin_11 | GPIO_Pin_12 | GPIO_Pin_13 | GPIO_Pin_14 | GPIO_Pin_15; // PE7~15,AF OUT
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;                                                                                                            // 复用输出
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;                                                                                                          // 推挽输出
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;                                                                                                      // 100MHz
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;                                                                                                            // 上拉
    GPIO_Init(GPIOE, &GPIO_InitStructure);                                                                                                                  // 初始化

    GPIO_PinAFConfig(GPIOD, GPIO_PinSource0, GPIO_AF_FSMC); //
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource1, GPIO_AF_FSMC); //
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource4, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource5, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource7, GPIO_AF_FSMC); // 和ZET6芯片差异
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource8, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource9, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource10, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource13, GPIO_AF_FSMC); // 和ZET6芯片差异
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource14, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOD, GPIO_PinSource15, GPIO_AF_FSMC); //

    GPIO_PinAFConfig(GPIOE, GPIO_PinSource7, GPIO_AF_FSMC); // PE7,AF12
    GPIO_PinAFConfig(GPIOE, GPIO_PinSource8, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOE, GPIO_PinSource9, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOE, GPIO_PinSource10, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOE, GPIO_PinSource11, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOE, GPIO_PinSource12, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOE, GPIO_PinSource13, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOE, GPIO_PinSource14, GPIO_AF_FSMC);
    GPIO_PinAFConfig(GPIOE, GPIO_PinSource15, GPIO_AF_FSMC); // PE15,AF12

}

void LCD_Init(void)
{
    vu32 i = 0;

    lcd_gpio_init();
    lcd_fsmc_init();

    tim_delay_ms(50); // delay 50 ms
    LCD_WriteReg(0x0000, 0x0001);
    tim_delay_ms(50); // delay 50 ms
    lcddev.id = LCD_ReadReg(0x0000);
    if (lcddev.id < 0XFF || lcddev.id == 0XFFFF || lcddev.id == 0X9300) // 读到ID不正确,新增lcddev.id==0X9300判断，因为9341在未被复位的情况下会被读成9300
    {
        // 尝试9341 ID的读取
        LCD_WR_REG(0XD3);
        lcddev.id = LCD_RD_DATA(); // dummy read
        lcddev.id = LCD_RD_DATA(); // 读到0X00
        lcddev.id = LCD_RD_DATA(); // 读取93
        lcddev.id <<= 8;
        lcddev.id |= LCD_RD_DATA(); // 读取41
    }
    if(lcddev.id==0X9341||lcddev.id==0X5310||lcddev.id==0X5510)//如果是这三个IC,则设置WR时序为最快
    {
    //重新配置写时序控制寄存器的时序
    FSMC_Bank1E->BWTR[6] &= ~(0XF << 0);          // 地址建立时间（ADDSET）清零
    FSMC_Bank1E->BWTR[6] &= ~(0XF << 8);          // 数据保存时间清零
    FSMC_Bank1E->BWTR[6] |= 3 << 0;               // 地址建立时间（ADDSET）为3个HCLK =18ns
    FSMC_Bank1E->BWTR[6] |= 2 << 8;               // 数据保存时间为6ns*3个HCLK=18ns
    }
    log_printf("[INFO]lcd id:%x\r\n",lcddev.id); //打印LCD ID
    if(lcddev.id==0X9341)    //9341初始化
    {
        LCD_WR_REG(0xCF);
        LCD_WR_DATA(0x00);
        i++;
        LCD_WR_DATA(0xC1);
        LCD_WR_DATA(0X30);
        LCD_WR_REG(0xED);
        LCD_WR_DATA(0x64);
        LCD_WR_DATA(0x03);
        LCD_WR_DATA(0X12);
        LCD_WR_DATA(0X81);
        LCD_WR_REG(0xE8);
        LCD_WR_DATA(0x85);
        LCD_WR_DATA(0x10);
        LCD_WR_DATA(0x7A);
        LCD_WR_REG(0xCB);
        LCD_WR_DATA(0x39);
        LCD_WR_DATA(0x2C);
        LCD_WR_DATA(0x00);
        LCD_WR_DATA(0x34);
        LCD_WR_DATA(0x02);
        LCD_WR_REG(0xF7);
        LCD_WR_DATA(0x20);
        LCD_WR_REG(0xEA);
        LCD_WR_DATA(0x00);
        LCD_WR_DATA(0x00);
        LCD_WR_REG(0xC0);    //Power control
        LCD_WR_DATA(0x1B);   //VRH[5:0]
        LCD_WR_REG(0xC1);    //Power control
        LCD_WR_DATA(0x01);   //SAP[2:0];BT[3:0]
        LCD_WR_REG(0xC5);    //VCM control
        LCD_WR_DATA(0x30);      //3F
        LCD_WR_DATA(0x30);      //3C
        LCD_WR_REG(0xC7);    //VCM control2
        LCD_WR_DATA(0XB7);
        LCD_WR_REG(0x36);    // Memory Access Control
        // LCD_WR_DATA(0x48);
        LCD_WR_DATA(0X28);

        LCD_WR_REG(0x3A);
        LCD_WR_DATA(0x55);
        LCD_WR_REG(0xB1);
        LCD_WR_DATA(0x00);
        LCD_WR_DATA(0x1A);
        LCD_WR_REG(0xB6);    // Display Function Control
        LCD_WR_DATA(0x0A);
        LCD_WR_DATA(0xA2);
        LCD_WR_REG(0xF2);    // 3Gamma Function Disable
        LCD_WR_DATA(0x00);
        LCD_WR_REG(0x26);    //Gamma curve selected
        LCD_WR_DATA(0x01);
        LCD_WR_REG(0xE0);    //Set Gamma
        LCD_WR_DATA(0x0F);
        LCD_WR_DATA(0x2A);
        LCD_WR_DATA(0x28);
        LCD_WR_DATA(0x08);
        LCD_WR_DATA(0x0E);
        LCD_WR_DATA(0x08);
        LCD_WR_DATA(0x54);
        LCD_WR_DATA(0XA9);
        LCD_WR_DATA(0x43);
        LCD_WR_DATA(0x0A);
        LCD_WR_DATA(0x0F);
        LCD_WR_DATA(0x00);
        LCD_WR_DATA(0x00);
        LCD_WR_DATA(0x00);
        LCD_WR_DATA(0x00);
        LCD_WR_REG(0XE1);    //Set Gamma
        LCD_WR_DATA(0x00);
        LCD_WR_DATA(0x15);
        LCD_WR_DATA(0x17);
        LCD_WR_DATA(0x07);
        LCD_WR_DATA(0x11);
        LCD_WR_DATA(0x06);
        LCD_WR_DATA(0x2B);
        LCD_WR_DATA(0x56);
        LCD_WR_DATA(0x3C);
        LCD_WR_DATA(0x05);
        LCD_WR_DATA(0x10);
        LCD_WR_DATA(0x0F);
        LCD_WR_DATA(0x3F);
        LCD_WR_DATA(0x3F);
        LCD_WR_DATA(0x0F);
        LCD_WR_REG(0x2B);
        LCD_WR_DATA(0x00);
        LCD_WR_DATA(0x00);
        LCD_WR_DATA(0x01);
        LCD_WR_DATA(0x3f);
        LCD_WR_REG(0x2A);
        LCD_WR_DATA(0x00);
        LCD_WR_DATA(0x00);
        LCD_WR_DATA(0x00);
        LCD_WR_DATA(0xef);
        LCD_WR_REG(0x11); //Exit Sleep
        tim_delay_ms(120);
        LCD_WR_REG(0x29); //display on
    }
    LCD_Display_Dir(0);             //默认为竖屏
    GPIO_SetBits(GPIOB, GPIO_Pin_1); //点亮背光
    LCD_Clear(WHITE);
}

void LCD_Clear(uint16_t color)
{
    uint32_t index = 0;
    uint32_t totalpoint = lcddev.width;
    totalpoint *= lcddev.height;                    // 得到总点数

    LCD_SetCursor(0x00, 0x0000);                    // 设置光标位置
    LCD_Set_Window(0, 0, lcddev.width-1, lcddev.height-1);
    LCD_WriteRAM_Prepare();                         // 开始写入GRAM
    for (index = 0; index < totalpoint; index++)
    {
        LCD->LCD_RAM = color;
    }
}

void LCD_Fill(uint16_t sx,uint16_t sy,uint16_t ex,uint16_t ey,uint16_t color)
{
    uint16_t i,j;
    uint16_t xlen=ex-sx+1;

    // 设置整个区域一次
    LCD_WR_REG(0x2A);
    LCD_WR_DATA(sx >> 8);
    LCD_WR_DATA(sx & 0xFF);
    LCD_WR_DATA(ex >> 8);
    LCD_WR_DATA(ex & 0xFF);

    LCD_WR_REG(0x2B);
    LCD_WR_DATA(sy >> 8);
    LCD_WR_DATA(sy & 0xFF);
    LCD_WR_DATA(ey >> 8);
    LCD_WR_DATA(ey & 0xFF);

    LCD_WR_REG(0x2C);  // 开始写GRAM

    // 连续写入像素
    for (i = sy; i <= ey; i++)
    {
        for (j = 0; j < xlen; j++)
        {
            LCD->LCD_RAM = color;
        }
    }
}

void LCD_ShowChar(uint16_t x, uint16_t y, char chr, uint8_t size, uint8_t mode,
                    uint16_t color, uint16_t bgcolor)
{
    // printf("LCD_ShowChar chr=%c size=%d num=%d\r\n", chr, size, chr - ' ');

    uint8_t temp, t, t1;
    uint16_t y0 = y;
    uint8_t csize = (size / 8 + ((size % 8) ? 1 : 0)) * (size / 2); //如果size不能被8整除（即有余数），则加1，否则加0
    uint8_t num = chr - ' ';

    for (t = 0; t < csize; t++) //csize 3+0 *12= 36
    {
        if (size == 12)
            temp = asc2_1206[num][t];
        else if (size == 16)
            temp = asc2_1608[num][t];
        else if (size == 24)
        {
            temp = asc2_2412[num][t];
            // printf("LCD_ShowChar temp=%d \r\n", temp);
        }
        else
            return;

        for (t1 = 0; t1 < 8; t1++)
        {
            if (temp & 0x80)
                LCD_Fast_DrawPoint(x, y, color);
            else if (mode == 0)
                LCD_Fast_DrawPoint(x, y, bgcolor);
            temp <<= 1;
            y++;
            if ((y - y0) == size)
            {
                y = y0;
                x++;
                break;
            }
        }
    }
}

void lcd_set_window(uint16_t x_start, uint16_t y_start, uint16_t x_end, uint16_t y_end)
{
    // 设置列（X坐标）范围
    LCD_WR_REG(0x2A);  // Column Address Set
    LCD_WR_DATA(x_start >> 8);
    LCD_WR_DATA(x_start & 0xFF);
    LCD_WR_DATA(x_end >> 8);
    LCD_WR_DATA(x_end & 0xFF);

    // 设置行（Y坐标）范围
    LCD_WR_REG(0x2B);  // Page Address Set
    LCD_WR_DATA(y_start >> 8);
    LCD_WR_DATA(y_start & 0xFF);
    LCD_WR_DATA(y_end >> 8);
    LCD_WR_DATA(y_end & 0xFF);

    // 写入下一条命令：准备写像素数据
    LCD_WR_REG(0x2C);  // Memory Write
}

void LCD_ShowChinese(uint16_t x, uint16_t y,const uint8_t font_lib[][72],uint8_t index, uint8_t size,
                     uint16_t color, uint16_t bgcolor)
{
    const uint8_t *p = font_lib[index];
    uint8_t bytes_per_row;
    if (size == 24)
        bytes_per_row = 3;
    else if (size == 16)
        bytes_per_row = 2;
    else if (size == 12)
        bytes_per_row = 2;
    else
        bytes_per_row = (size + 7) / 8;

    for (uint8_t row = 0; row < size; row++)
    {
        for (uint8_t col_byte = 0; col_byte < bytes_per_row; col_byte++)
        {
            uint8_t temp = p[row * bytes_per_row + col_byte];
            for (uint8_t bit = 0; bit < 8; bit++)
            {
                if (col_byte * 8 + bit >= size)
                    break;
                if (temp & 0x80)
                    LCD_Fast_DrawPoint(x + col_byte * 8 + bit, y + row, color);
                else
                    LCD_Fast_DrawPoint(x + col_byte * 8 + bit, y + row, bgcolor);
                temp <<= 1;
            }
        }
    }
}
